// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`China getting dvptCooperation 1`] = `
"Array [
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"SkMrcNczf\\",
    \\"value\\": 1.8,
    \\"year\\": 2006,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"HylzHqNczG\\",
    \\"value\\": 0.7,
    \\"year\\": 2006,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"B1-GrcNczG\\",
    \\"value\\": 0.2,
    \\"year\\": 2006,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"S1MGS5N5fG\\",
    \\"value\\": 2.3,
    \\"year\\": 2007,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"SkXfSqE9MG\\",
    \\"value\\": 1.3,
    \\"year\\": 2007,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"H1NzB94qfz\\",
    \\"value\\": 0.2,
    \\"year\\": 2007,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"H1BfBc49Mz\\",
    \\"value\\": 2.3,
    \\"year\\": 2008,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"ryIfBq4cGM\\",
    \\"value\\": 1,
    \\"year\\": 2008,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"BkDGH9N9fG\\",
    \\"value\\": 0.3,
    \\"year\\": 2008,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"ryOGr5NcfM\\",
    \\"value\\": 2.4,
    \\"year\\": 2009,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"SktzS9EqMM\\",
    \\"value\\": 1.8,
    \\"year\\": 2009,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"SJ9GH5EqMf\\",
    \\"value\\": 0.3,
    \\"year\\": 2009,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"HkjfS9Vczf\\",
    \\"value\\": 2.3,
    \\"year\\": 2010,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"SkhMS5V5fG\\",
    \\"value\\": 2.3,
    \\"year\\": 2010,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"r1afH549zG\\",
    \\"value\\": 0.4,
    \\"year\\": 2010,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"SyCzB949GM\\",
    \\"value\\": 2.7,
    \\"year\\": 2011,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"H11efB5E5MG\\",
    \\"value\\": 2.3,
    \\"year\\": 2011,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"S1exfB9N5GM\\",
    \\"value\\": 0.3,
    \\"year\\": 2011,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"SJWeGSq45ff\\",
    \\"value\\": 3,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"ByfxzS9Eqfz\\",
    \\"value\\": 2.1,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"rkmxzBcNqfG\\",
    \\"value\\": 0.4,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"SJEeGBcVqGf\\",
    \\"value\\": 2.6,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"B1HefH945Mf\\",
    \\"value\\": 2.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"Bk8lfH5Vczf\\",
    \\"value\\": 0.7,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"HkveGH5Vcff\\",
    \\"value\\": 2.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"HyOxfr9E9ff\\",
    \\"value\\": 2.6,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"ByYxMScVqfz\\",
    \\"value\\": 0.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Grants and interest free loans\\",
    \\"uid\\": \\"BJ5efrqEczG\\",
    \\"value\\": 2.2,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"#f39b95\\",
    \\"id\\": \\"Gross disbursement of concessional loans\\",
    \\"uid\\": \\"rJolfrc4qff\\",
    \\"value\\": 3.3,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"BJ2xGS949zM\\",
    \\"value\\": 0.6,
    \\"year\\": 2015,
  },
]"
`;

exports[`China getting multiCooperation 1`] = `
"Array [
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"region\\": \\"Africa\\",
    \\"uid\\": \\"rJ6eGBcNcfM\\",
    \\"value\\": 65.9,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"region\\": \\"Asia\\",
    \\"uid\\": \\"HJAlMHq4czG\\",
    \\"value\\": 19,
  },
  Object {
    \\"color\\": \\"#93328E\\",
    \\"region\\": \\"Europe\\",
    \\"uid\\": \\"HyJbGB9N9MM\\",
    \\"value\\": 7,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"region\\": \\"Americas\\",
    \\"uid\\": \\"HJeWMH945zf\\",
    \\"value\\": 6,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"region\\": \\"Oceania\\",
    \\"uid\\": \\"B1bZzS5EqzM\\",
    \\"value\\": 2.1,
  },
]"
`;

exports[`China getting tch top recipients 1`] = `
"Array [
  Object {
    \\"color\\": \\"#0071b1\\",
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"rJM-zH5N9Gz\\",
    \\"value\\": 5695.6,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#bc2629\\",
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"rymWMB94qGG\\",
    \\"value\\": 1441.9,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"SyEbMBqE9Gz\\",
    \\"value\\": 1355.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"SJB-fSqN5MG\\",
    \\"value\\": 919.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#DC73FF\\",
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"BJL-zHqVczf\\",
    \\"value\\": 306.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"H1vWfS9NcGf\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"rkOZfS9V9Gf\\",
    \\"value\\": 445.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"B1t-fSqN9fM\\",
    \\"value\\": 1777.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#0071b1\\",
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"Hk9WzHc4cGz\\",
    \\"value\\": 3319.9,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#bc2629\\",
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"rkjWGSqNczM\\",
    \\"value\\": 568.5,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"B1h-MS9E5Gf\\",
    \\"value\\": 187.1,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"SJT-fSqNqzM\\",
    \\"value\\": 560.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#DC73FF\\",
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"BJCbMS5V5Mz\\",
    \\"value\\": 696,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"HJJMGrcNqzM\\",
    \\"value\\": 900.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"S1gMMBcVqGM\\",
    \\"value\\": 276.6,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"ry-MfScVqGM\\",
    \\"value\\": 3046,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#0071b1\\",
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"ryfMGrqV9fz\\",
    \\"value\\": 4008.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#bc2629\\",
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"S1mfzS5V5Mz\\",
    \\"value\\": 1404,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"rkEMzSq45zf\\",
    \\"value\\": 439,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"HkBGfBcEqMG\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#DC73FF\\",
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"B18zGrc4cfz\\",
    \\"value\\": 367,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"rywzzBcVcMG\\",
    \\"value\\": 31.7,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"SkdzfH549fG\\",
    \\"value\\": 28.2,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"ryYzzBcEcMz\\",
    \\"value\\": 579.8,
    \\"year\\": 2014,
  },
]"
`;

exports[`China getting tch top recipients 2`] = `
"Array [
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"Sy9GGB9Vczf\\",
    \\"value\\": 5695.6,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"SyjMfH945Mz\\",
    \\"value\\": 1441.9,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"ry2fMr94czz\\",
    \\"value\\": 1355.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"B1TzGS5Nqff\\",
    \\"value\\": 919.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"rJCfMB5VcMz\\",
    \\"value\\": 306.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"rk17Mrq49fM\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"BkxQGrcVcff\\",
    \\"value\\": 445.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"Hy-XMSqV9zz\\",
    \\"value\\": 1777.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"SyzmGr5E9zM\\",
    \\"value\\": 3319.9,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"SkX7MScEqzz\\",
    \\"value\\": 568.5,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"B1V7zS9NqGG\\",
    \\"value\\": 187.1,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"BkH7GB545fM\\",
    \\"value\\": 560.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"HJUXMHqNqfG\\",
    \\"value\\": 696,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"rJvXGS94czz\\",
    \\"value\\": 900.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"ByuQMB5E5Mz\\",
    \\"value\\": 276.6,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"BJK7zB9E5fM\\",
    \\"value\\": 3046,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"BJqQfS5VcGf\\",
    \\"value\\": 4008.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"r1iXGH5NqGz\\",
    \\"value\\": 1404,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"By3QzS54qfz\\",
    \\"value\\": 439,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"S1TXfB9E5Mf\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"rJCQMrcN9MG\\",
    \\"value\\": 367,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"BkkEzHq45MM\\",
    \\"value\\": 31.7,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"B1lVGS5V9zM\\",
    \\"value\\": 28.2,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"H1WEzB9VcMz\\",
    \\"value\\": 579.8,
    \\"year\\": 2014,
  },
]"
`;

exports[`China getting tch top recipients 3`] = `
"Array [
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"ryGNGB9E9zz\\",
    \\"value\\": 0.2,
    \\"year\\": 2006,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"H1XVfBcVqGG\\",
    \\"value\\": 0.2,
    \\"year\\": 2007,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"rkN4GBcV9Mf\\",
    \\"value\\": 0.3,
    \\"year\\": 2008,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"ryHNfBcV9fz\\",
    \\"value\\": 0.3,
    \\"year\\": 2009,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"BJ8VGS94czf\\",
    \\"value\\": 0.4,
    \\"year\\": 2010,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"HyDVMH94qGf\\",
    \\"value\\": 0.3,
    \\"year\\": 2011,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"BydNGB5EcGf\\",
    \\"value\\": 0.4,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"HytNGB5VqMz\\",
    \\"value\\": 0.7,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"SkqVMBcE9fz\\",
    \\"value\\": 0.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"ryiNGS5N9GG\\",
    \\"value\\": 0.6,
    \\"year\\": 2015,
  },
]"
`;
